--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,7 @@
 	ui = true
 [core]
 	autoctrl = input
+	excludesfile = /Users/34457/.gitignore_global
 [merge]
 	ff = false
 [push]
@@ -75,3 +76,9 @@
 
 	# tag
 	t = tag -n											# show tags with <n> lines of each tag message
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
