--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ Thumbs.db
 venv
 node_modules
 .sass-cache
+iTermocil.yml
+.idea
 
 # ~/.dotfiles project specific ignores
 .extra
+extra_config.fish
