--- a/.gitconfig
+++ b/.gitconfig
@@ -92,6 +92,10 @@
     update-from = "!f() { git fetch $1 --prune; git merge --ff-only $1/$2 || git rebase --preserve-merges $1/$2; }; f"
 	uf = update-from
 
+	# https://zarino.co.uk/post/git-set-upstream/
+	set-upstream = !git branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`
+	su = set-upstream
+
 [difftool "sourcetree"]
 	cmd = /Applications/kdiff3.app/Contents/MacOS/kdiff3 \"$LOCAL\" \"$REMOTE\"
 	path = 
