--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,2 @@
-# Folder view configuration files
-.DS_Store
-Desktop.ini
-
-# Thumbnail cache files
-._*
-Thumbs.db
-
-# Files that might appear on external disks
-.Spotlight-V100
-.Trashes
-
-# Python files
-*.pyc
-.venv
-
-# Compiled C++ files
-*.out
-
-# Application specific files
-venv
-node_modules
-.sass-cache
-iTermocil.yml
-.idea
-
-# ~/.dotfiles project specific ignores
-.extra
-extra_config.fish
+bash/.extra
+fish/extra_config.fish
