--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,6 +3,7 @@
 [core]
 	autoctrl = input
 	excludesfile = /Users/dennisevert/.gitignore_global
+	editor = nvim
 [merge]
 	ff = false
 [push]
@@ -88,14 +89,13 @@
 	# tag
 	t = tag -n											# show tags with <n> lines of each tag message
 
-    # https://adamcod.es/2014/12/10/git-pull-correct-workflow.html
-    update-from = "!f() { git fetch $1 --prune; git merge --ff-only $1/$2 || git rebase --preserve-merges $1/$2; }; f"
+	# https://adamcod.es/2014/12/10/git-pull-correct-workflow.html
+	update-from = "!f() { git fetch $1 --prune; git merge --ff-only $1/$2 || git rebase --preserve-merges $1/$2; }; f"
 	uf = update-from
 
 	# https://zarino.co.uk/post/git-set-upstream/
 	set-upstream = !git branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`
 	su = set-upstream
-
 [difftool "sourcetree"]
 	cmd = /Applications/kdiff3.app/Contents/MacOS/kdiff3 \"$LOCAL\" \"$REMOTE\"
 	path = 
