Fixing some issues with path and getting python2 & 3 working simultaniously

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -129,8 +129,8 @@
 
   // Python Extension
   // ---------------------------------------------------------------------------
-
-  "python.disablePromptForFeatures": ["pylint"],
+  
+  "python.pythonPath": "/usr/local/bin/python",
 
   // Search
   // ---------------------------------------------------------------------------
