Latest vscode settings changes

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -9,13 +9,16 @@
 
   "cSpell.userWords": [
     "Keymap",
+    "Leadpages",
     "Menlo",
     "Monokai",
     "Neovim",
     "gitlens",
+    "lifecycle",
     "monospace",
     "postcss",
     "pylint",
+    "repo",
     "stylelint"
   ],
   
