--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -106,10 +106,12 @@
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path = 
 [mergetool "sourcetree"]
-	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 [commit]
   template = /Users/dennisevert/.stCommitMsg
 [user]
   name = Dennis Evert
   email = dennisevert@gmail.com
+[branch]
+	autosetupmerge = always
