--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -111,12 +111,14 @@
   //   "editor.formatOnSave": false,
   // },
   "editor.quickSuggestions": {
-    "other": true,
     "comments": false,
+    "other": false,
     "strings": false
   },
+  // "editor.quickSuggestionsDelay": 1000,
   "editor.wordBasedSuggestions": false,
   "editor.suggestOnTriggerCharacters": false,
+  "editor.acceptSuggestionOnCommitCharacter": false,
   "editor.parameterHints.enabled": false,
 
   // Emmet
@@ -230,18 +232,20 @@
 
   // Vim
   // ---------------------------------------------------------------------------
-  "vim.easymotion": true,
-  "vim.easymotionMarkerFontFamily": "Operator Mono, Menlo, Monaco, 'Courier New', monospace",
-  "vim.easymotionMarkerFontSize": "14",
-  "vim.easymotionMarkerFontWeight": "bold",
-  "vim.easymotionMarkerHeight": 22,
-  "vim.easymotionMarkerYOffset": 0,
+  // "vim.easymotion": true,
+  // "vim.easymotionMarkerFontFamily": "Operator Mono, Menlo, Monaco, 'Courier New', monospace",
+  // "vim.easymotionMarkerFontSize": "14",
+  // "vim.easymotionMarkerFontWeight": "bold",
+  // "vim.easymotionMarkerHeight": 22,
+  // "vim.easymotionMarkerYOffset": 0,
   "vim.enableNeovim": true,
   "vim.debug.silent": true,
   "vim.leader": "<Space>",
   "vim.neovimPath": "/usr/local/bin/nvim",
   "vim.useSystemClipboard": true,
-  "vim.camelCaseMotion": true,
+  "vim.camelCaseMotion.enable": true,
+  "vim.highlightedyank.enable": true,
+  "vim.visualstar": true,
   "vim.insertModeKeyBindings": [
     {
       "before": ["j", "j"],
@@ -256,6 +260,28 @@
     {
       "before": ["<"],
       "commands": ["editor.action.outdentLines"]
+    }
+  ],
+  "vim.normalModeKeyBindingsNonRecursive": [
+    {
+      "before": ["<leader>", "<leader>" "m"],
+      "commands": ["bookmarks.toggle"]
+    },
+    {
+      "before": ["<leader>", "<leader>", "b"],
+      "commands": ["bookmarks.list"]
+    },
+    // Workaround for issue with unexpected cursor jumps after a delete
+    // https://github.com/VSCodeVim/Vim/issues/3713
+    // https://github.com/VSCodeVim/Vim/issues/3694
+    // https://github.com/VSCodeVim/Vim/issues/3455#issuecomment-489694562
+    {
+      "before": ["j"],
+      "after": ["g", "j"]
+    },
+    {
+      "before": ["k"],
+      "after": ["g", "k"]
     }
   ],
 
@@ -290,5 +316,8 @@
   // Zen Mode
   // ---------------------------------------------------------------------------
 
-  "zenMode.centerLayout": false
+  "zenMode.centerLayout": false,
+  "zenMode.fullScreen": false,
+  "zenMode.hideLineNumbers": false,
+  "zenMode.hideTabs": false
 }
