Fix comma in vscode settings.json

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -264,7 +264,7 @@
   ],
   "vim.normalModeKeyBindingsNonRecursive": [
     {
-      "before": ["<leader>", "<leader>" "m"],
+      "before": ["<leader>", "<leader>", "m"],
       "commands": ["bookmarks.toggle"]
     },
     {
