Disable breadcrumbs in vscode settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -121,6 +121,8 @@
   "editor.acceptSuggestionOnCommitCharacter": false,
   "editor.parameterHints.enabled": false,
 
+  "breadcrumbs.enabled": false,
+
   // Emmet
   // ---------------------------------------------------------------------------
 
