--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,11 +1,9 @@
 [color]
   ui = true
 [core]
-  autoctrl = input
-	excludesfile = /Users/dennisevert/.gitignore_global
+  autocrlf = input
+  excludesfile = /Users/dennisevert/.gitignore_global
   editor = nvim
-[merge]
-  ff = false
 [push]
   default = current
 [alias]
@@ -75,6 +73,7 @@
   rv = remote -v                  # show remotes (verbose)
 
   # reset
+  rh = reset --hard
   rhh = reset --hard HEAD
   unstage = reset HEAD            # remove files from index (tracking)
   uncommit = reset --soft HEAD^   # go back before last commit, with files in uncommitted state
@@ -108,8 +107,6 @@
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
-[commit]
-	template = /Users/dennisevert/.stCommitMsg
 [user]
-	name = Dennis Evert
-	email = dennisevert@gmail.com
+  name = Dennis Evert
+  email = dennisevert@gmail.com
